swen430as2/test_files/invalid/is/Is_Invalid_04-TC01.while
type nint is null|int
type Point is { nint x, nint y}

void main() {
    Point p = {x:123,y:123};
    assert p.x is bool;
}
